--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -10044,3 +10044,285 @@ div.slack {
     background-repeat: no-repeat; 
     background-image: url(/assets/images/slack.svg); 
   }
+
+/* Mesh Timeline
+   ========================================================================== */
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 750px;
+  margin: 0 auto 50px;
+}
+
+.timeline::before {
+  content: '';
+  position: absolute;
+  left: 46.7%;
+  top: -25px;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 25px solid #39D3A9;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.img-style0, .img-style1 {
+  width: 75px;
+  height: 70px;
+}
+
+.img-style1 {
+  float: right;
+  margin: -5px 0 0 5px;
+}
+
+.img-style0 {
+  float: left;
+  margin: -5px 5px 0 0;
+}
+
+/* data-cont around content */
+.data-cont {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+  margin-bottom: -75px;
+}
+
+/* The circles on the timeline */
+.data-cont::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -18px;
+  background-color:#3B494F;
+  border: 4px solid #39D3A9;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the data-cont to the left */
+.arr1 {
+  left: -5px;
+}
+
+/* Place the data-cont to the right */
+.arr0 {
+  left: 50%;
+}
+
+/* Add arrows to the left, right data-cont (pointing right) */
+.arr1::before, .arr0::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 18px;
+  width: 0;
+  z-index: 1;
+  border: medium solid white;
+}
+
+.arr1::before {
+  right: 30px;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+.arr0::before {
+  left: 30px;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for data-conts on the right side */
+.arr0::after {
+  left: -12px;
+}
+
+/* The actual content */
+.content0, .content1 {
+  padding: 5px 15px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+.content1 {
+  text-align: right;
+}
+
+.mesh-name {
+  font-size: 30px;
+  margin: 10px 0 0;
+}
+
+.mesh-ann-date {
+  font-size: 20px;
+  margin: 10px 0 5px;
+}
+
+.meshname-img {
+  height: 90px;
+}
+
+@media screen and (max-width: 850px) {
+
+  .data-cont {
+    margin-bottom: -70px;
+  }
+
+  .meshname-img {
+    height: 65px;
+  }
+
+  .mesh-name {
+    font-size: 24px;
+  }
+
+  .mesh-ann-date  {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  
+  .timeline::before {
+    left: 46.4%;
+  }
+
+  .data-cont {
+    margin-bottom: -65px;
+  }
+
+  .meshname-img {
+    height: 60px;
+  }
+
+  .mesh-name {
+    font-size: 20px;
+  }
+
+  .mesh-ann-date  {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  
+  .timeline {
+    margin: 0 auto;
+  }
+
+  .timeline::after {
+    left: 55px;
+  }
+
+  .timeline::before {
+    left: 30px;
+  }
+  .data-cont {
+    width: 70%;
+    padding-left: 100px;
+    padding-right: 25px;
+    margin-bottom: 0px;
+  }
+
+  .data-cont::before {
+    left: 90px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+  
+  .arr0::after, .arr1::after {
+    left: 42px;
+  }
+  
+  .arr0, .arr1 {
+    left: 0;
+  }
+
+  .meshname-img {
+    height: 40px;
+  } 
+
+  .img-style0, .img-style1 {
+    width: 40px;
+    height: 35px;
+  }
+
+  .img-style1 {
+    float: left;
+    margin: -5px 5px 0 0;
+  }
+  
+  .mesh-name {
+    font-size: 18px;
+    text-align: left;
+  }
+
+  .mesh-ann-date  {
+    font-size: 14px;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  
+  .data-cont {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  
+  .data-cont::after {
+    width: 20px;
+    height: 20px;
+  }
+
+  .arr0::after, .arr1::after {
+    left: 45px;
+  }
+
+  .meshname-img {
+    height: 30px;
+  } 
+  
+  .mesh-name {
+    font-size: 14px;
+  }
+
+  .mesh-ann-date  {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  
+  .img-style0, .img-style1 {
+    width: 30px;
+    height: 25px;
+  }
+  
+  .mesh-name {
+    font-size: 12px;
+  }
+
+  .mesh-ann-date  {
+    font-size: 8px;
+  }
+}
